--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,4 +1,46 @@
-img {
+#about {
+  background: pink;
+  height: 800px;
+
+  img {
+    width: 100%;
+    margin-top: 50px;
+  }
+}
+
+#icecream {
+  background: blue;
+  height: 800px;
+}
+
+#contact {
+  background: blue;
+  height: 800px;
+}
+
+.section {
   width: 100%;
-  margin-top: 50px;
+  height: 500px;
+  z-index: 0;
+  -webkit-transform: translateZ(0);
+  transform: translateZ (0);
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+a[id="about"]:target ~ #main.section {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
+a[id="icecream"]:target ~ #main.section {
+  -webkit-transform: translateY(-500px);
+  transform: translateY(-500px);
+}
+
+a[id="contact"]:target ~ #main.section {
+  -webkit-transform: translateY(-1000px);
+  transform: translateY(-1000px);
 }
