--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -4,27 +4,41 @@
   margin: 15px auto;
 }
 
-.nav-links {
-  display: flex;
-  justify-content: center;
-  width: 400px;
+nav {
+  position: fixed;
+  background: white;
   margin: 0 auto;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
 
-  a {
-    display: block;
-    color: black;
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 5px 30px;
-    font-size: 1.4rem;
-    font-family: $headerfont;
-    transition: all 0.5s ease;
+  .nav-links {
+    display: flex;
+    justify-content: center;
+    width: 400px;
+    margin: 0 auto;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
 
-    &:hover {
-      background: black;
-      color: white;
+    ul {
+      list-style: none;
+
+      li {
+        display: inline-block;
+      }
+    }
+
+    a {
+      display: block;
+      color: black;
+      text-decoration: none;
+      text-transform: uppercase;
+      padding: 5px 30px;
+      font-size: 1.4rem;
+      font-family: $headerfont;
+      transition: all 0.5s ease;
+
+      &:hover {
+        background: black;
+        color: white;
+      }
     }
   }
 }
