--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,4 +1,7 @@
-$headerfont: "Amatic SC", sans-serif;
+$headerfont: "Souce Code Pro", monospace;
+$primary-color: #ffe0d0;
+$secondary-color: #ff9c8d;
+$tertiary-color: #74b3fa;
 
 * {
   box-sizing: border-box;
