--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,18 +1,19 @@
 .logo {
   display: block;
-  width: 90px;
+  width: 80px;
   margin: 15px auto;
 }
 
 nav {
   position: fixed;
   background: white;
-  margin: 0 auto;
+  width: 100%;
+  padding-bottom: 20px;
 
   .nav-links {
     display: flex;
     justify-content: center;
-    width: 400px;
+    width: 500px;
     margin: 0 auto;
     border-bottom: 1px solid black;
     border-top: 1px solid black;
@@ -23,20 +24,24 @@ nav {
       li {
         display: inline-block;
       }
+
+      .active {
+        background: $primary-color;
+        color: white;
+      }
     }
 
     a {
       display: block;
       color: black;
       text-decoration: none;
-      text-transform: uppercase;
-      padding: 5px 30px;
-      font-size: 1.4rem;
+      padding: 5px 40px;
+      font-size: 1rem;
       font-family: $headerfont;
       transition: all 0.5s ease;
 
       &:hover {
-        background: black;
+        background: $secondary-color;
         color: white;
       }
     }
