--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -9,15 +9,39 @@ article img {
   h2 {
     position: absolute;
     top: 50%;
-    left: 50%;
+    right: 40%;
+    left: 10%;
     font-family: $headerfont;
     color: white;
     font-size: 3rem;
+    font-weight: 300;
+  }
+
+  img {
+    margin-top: 130px;
   }
 }
 
 #icecream {
   background: $primary-color;
+  height: 550px;
+  position: relative;
+
+  &:hover {
+    background: $secondary-color;
+    transition: all 0.5s ease;
+  }
+
+  h2 {
+    text-align: center;
+    text-decoration: underline;
+    color: blue;
+    font-family: $headerfont;
+    font-size: 2.5rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
 }
 
 #about {
