--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -7,8 +7,10 @@
 nav {
   position: fixed;
   background: white;
+  opacity: 0.95;
   width: 100%;
   padding-bottom: 20px;
+  z-index: 10;
 
   .nav-links {
     display: flex;
