--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,600');
 @import "base.scss";
 @import "nav.scss";
-@import "main.scss"
+@import "main.scss";
+@import "icecreamdetail.scss"
