--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,600');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300');
 @import "base.scss";
 @import "nav.scss";
 @import "main.scss";
-@import "icecreamdetail.scss"
+@import "slick.css";
+@import "slick-theme.css";
+@import "icecreamdetail.scss";
+@import "meetwing.scss";
