--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -17,8 +17,8 @@ nav {
     justify-content: center;
     width: 500px;
     margin: 0 auto;
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
+    border-bottom: 1px solid $text-color;
+    border-top: 1px solid $text-color;
 
     ul {
       list-style: none;
@@ -34,17 +34,29 @@ nav {
     }
 
     a {
+      @include maintext;
+
       display: block;
-      color: black;
       text-decoration: none;
       padding: 5px 40px;
-      font-size: 1rem;
-      font-family: $headerfont;
       transition: all 0.5s ease;
 
       &:hover {
         background: $secondary-color;
         color: white;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  nav {
+    .nav-links {
+      width: 400px;
+
+      a {
+        font-size: 0.9rem;
+        padding: 5px 15px;
       }
     }
   }
