--- a/src/scss/_icecreamdetail.scss
+++ b/src/scss/_icecreamdetail.scss
@@ -44,14 +44,14 @@
     position: relative;
 
     img {
-      width: 300px;
-      height: 300px;
+      width: 100%;
+      height: 100%;
     }
 
     .overlay {
       position: absolute;
-      width: 300px;
-      height: 300px;
+      width: 100%;
+      height: 100%;
       top: 0;
       left: 0;
       right: 0;
@@ -154,6 +154,23 @@
       margin: 0 auto;
       padding: 5% 10%;
       text-align: center;
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .scoops {
+    .singlescoop {
+      img {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+      }
+
+      .overlay {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
