--- a/style.css
+++ b/style.css
@@ -254,12 +254,12 @@ article img {
   .scoops .singlescoop {
     position: relative; }
     .scoops .singlescoop img {
-      width: 300px;
-      height: 300px; }
+      width: 100%;
+      height: 100%; }
     .scoops .singlescoop .overlay {
       position: absolute;
-      width: 300px;
-      height: 300px;
+      width: 100%;
+      height: 100%;
       top: 0;
       left: 0;
       right: 0;
@@ -335,6 +335,15 @@ article img {
       margin: 0 auto;
       padding: 5% 10%;
       text-align: center; } }
+
+@media only screen and (max-width: 600px) {
+  .scoops .singlescoop img {
+    width: 100%;
+    height: 100%;
+    margin: 0; }
+  .scoops .singlescoop .overlay {
+    width: 100%;
+    height: 100%; } }
 
 @media only screen and (max-width: 500px) {
   .menu .menu-text {
