--- a/style.css
+++ b/style.css
@@ -357,4 +357,11 @@ article img {
 
 .store img {
   width: 100%;
-  display: block; }
+  display: block;
+  padding-bottom: 50px; }
+
+@media only screen and (max-width: 800px) {
+  .wing {
+    padding-top: 180px; }
+    .wing .wing-image {
+      padding: 40px 0; } }
