--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,5 +5,6 @@
 @import "main.scss";
 @import "slick.css";
 @import "slick-theme.css";
+@import "scrolltrigger.css";
 @import "icecreamdetail.scss";
 @import "meetwing.scss";
