--- a/style.css
+++ b/style.css
@@ -381,6 +381,9 @@ article img {
   display: block;
   padding-bottom: 50px; }
 
+.wing-image {
+  transform: rotateY(180deg); }
+
 @media only screen and (max-width: 800px) {
   .wing {
     padding-top: 180px; }
