--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,8 +1,8 @@
-$headerfont: "Souce Code Pro", monospace;
-$bodycopy: "Raleway", sans-serif;
-$primary-color: #ffe0d0;
-$secondary-color: #ff9c8d;
-$tertiary-color: #74b3fa;
+$headerfont: "Cormorant Infant", serif;
+$bodycopy: "Roboto Mono", sans-serif;
+$primary-color: #fadce9;
+$secondary-color: #ffcee3;
+$header-color: blue;
 $text-color: black;
 
 @mixin maintext {
@@ -13,15 +13,14 @@ $text-color: black;
 
 @mixin headertext {
   text-align: center;
-  text-decoration: underline;
-  color: blue;
+  color: $header-color;
   font-family: $headerfont;
-  font-size: 2.5rem;
+  font-size: 3rem;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-weight: 300;
+  font-weight: 400;
 
   &:hover {
     padding-bottom: 4px;
@@ -31,8 +30,8 @@ $text-color: black;
 @mixin bodytext {
   font-family: $bodycopy;
   color: black;
-  font-size: 0.9rem;
-  line-height: 1.6rem;
+  font-size: 0.8rem;
+  line-height: 1.8rem;
 }
 
 * {
