--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,600');
-@import url('https://fonts.googleapis.com/css?family=Raleway:300');
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Infant:300,400|Open+Sans+Condensed:300');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100,300');
 @import "base.scss";
 @import "nav.scss";
 @import "main.scss";
